# speem

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_backup.txt  setup.py
scripts/: config.json  correct packets.pcapng  decode_detector_packets.ipynb  fix_data.ipynb  run_daq.py  run_ps.py  test.ipynb  test.py  test_camera.ipynb  test_camera.py  test_detector_packet_translation.ipynb  test_instrument.py  test_motors.ipynb  test_powersup_calibration.py  test_ps.ipynb  uv-test.py  uv_run_daq.py  wrong packets.pcapng
scripts/profiles/: many_counts.prof  most_counts.prof  new_red_led_v2.prof  placeholder.prof  random.prof  red_led_on_tdc.prof
speem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
speem/instruments/: __init__.py  version.py
speem/instruments/beam_pointer/: instrument.py
speem/instruments/detector/: __init__.py  common.py  etherdaq_udp.py  instrument.py  original_panel.py  panel copy.py  panel.py  simple_panel.py
speem/instruments/motors/: __init__.py  drivers.py  instrument.py  panel.py  specs.py
speem/instruments/power_meter/: __init__.py  instrument.py
speem/instruments/power_supply/: __main__.py  calibrated_supply.py  common.py  hvc20_cffi.py  hwdi_cffi.py  hwdi_low_level.py  instrument.py  panel.py  rudi_modules.py  (+2 more)
speem/scripts/: config.json  dummy_packets.prof  empty.prof  failed_packet.pcap  few_counts.prof  new_red_led.prof  random.prof  run_daq.py  run_ether_simulator.py  run_ps.py  test.ipynb  test.py  test_instrument.py  test_powersup_calibration.py
src/speem/: __init__.py  version.py
(+83 files in other folders)
