[project]
name = "speem"
version = "1.0.0"
description = "DAQ package for the SPEEM analyzer"
readme = "README.md"
authors = [
    { name = "Jacob Gobbo", email = "gobbo.jacob@gmail.com" },
    { name = "Conrad Standsbury", email = "chstansbury@gmail.com" }
]
requires-python = "~=3.12.0"
dependencies = [
    "cbitstruct>=1.1.1",
    "importlib-metadata>=8.7.0",
    "instrumentkit>=0.4.2",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "pymdrive>=1.0.0",
    "pymodbus>=3.11.3",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.13.7",
    "pyvisa>=1.15.0",
    "ruamel-yaml>=0.17.0",
    "scapy>=2.6.1",
    "scipy>=1.16.2",
    "thorlabspm100>=1.2.2",
    "xarray>=2025.10.1",
]

[tool.uv]
constraint-dependencies = ["pyqt5-qt5 <=5.15.2; sys_platform == 'win32'", "llvmlite>=0.37.0"]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
]
